Update dining options in index.html
Replaced delivery information with dining options.

--- a/index.html
+++ b/index.html
@@ -223,38 +223,10 @@
       <div class="infos">
         <div class="info-box">⏰ Horaires : 11h → 22h</div>
         <div class="info-box">📅 Jours : Mardi → Dimanche (fermé lundi)</div>
-        <div class="info-box">🚚 Livraison : 20-45 min</div>
+        <div class="info-box">🍕 sur place ou à emporter</div>
       </div>
     </div>
   </main>
-
-  <section id="carte">
-    <div class="section-wrap">
-      <h2 class="menu-title">La carte</h2>
-      <p style="opacity:.85;margin:0;">
-        Nos best-sellers (tu peux modifier les noms/prix).
-      </p>
-
-      <div class="menu-grid">
-        <div class="menu-item">
-          <strong>Margherita <span class="price">8,90€</span></strong>
-          Sauce tomate, mozzarella, basilic.
-        </div>
-        <div class="menu-item">
-          <strong>Reine <span class="price">10,90€</span></strong>
-          Jambon, champignons, mozzarella.
-        </div>
-        <div class="menu-item">
-          <strong>4 Fromages <span class="price">11,90€</span></strong>
-          Mozzarella, chèvre, gorgonzola, parmesan.
-        </div>
-        <div class="menu-item">
-          <strong>Pepperoni <span class="price">12,50€</span></strong>
-          Pepperoni, mozzarella, sauce tomate.
-        </div>
-      </div>
-    </div>
-  </section>
 
   <section id="contact">
     <div class="section-wrap">
