Replace button with link to PDF menu

--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
         On t’attend de <b>11h à 22h</b> (fermé le lundi).
       </p>
 
-      <div class="buttons">
-        <button class="btn btn-primary" onclick="document.getElementById('carte').scrollIntoView({behavior:'smooth'})">
-          La carte
-        </button>
+      <a href="carte.pdf" target="_blank" class="btn btn-primary">
+        La carte
+      </a>
+
         <button class="btn btn-secondary" onclick="alert('📞 Commande : 01 23 45 67 89')">
           Commander
         </button>
