Change link to button for opening carte.pdf

--- a/index.html
+++ b/index.html
@@ -211,9 +211,10 @@
         On t’attend de <b>11h à 22h</b> (fermé le lundi).
       </p>
 
-      <a href="carte.pdf" target="_blank" class="btn btn-primary">
+      <button class="btn btn-primary" onclick="window.open('carte.pdf', '_blank')">
         La carte
-      </a>
+    </button>
+
 
         <button class="btn btn-secondary" onclick="alert('📞 Commande : 01 23 45 67 89')">
           Commander
