Refactor main section layout and buttons

--- a/index.html
+++ b/index.html
@@ -202,32 +202,33 @@
     </nav>
   </header>
 
-  <main id="accueil" class="hero">
-    <div class="card">
-      <div class="badge">🕒 Ouvert du mardi au dimanche — 11h à 22h</div>
-      <h1>La pizza des étudiants 🍕</h1>
-      <p>
-        Pizzas généreuses, prix étudiants, sur place ou à emporter.
-        On t’attend de <b>11h à 22h</b> (fermé le lundi).
-      </p>
+<main id="accueil" class="hero">
+  <div class="card">
+    <div class="badge">🕒 Ouvert du mardi au dimanche — 11h à 22h</div>
+    <h1>La pizza des étudiants 🍕</h1>
+    <p>
+      Pizzas généreuses, prix étudiants, sur place ou à emporter.
+      On t’attend de <b>11h à 22h</b> (fermé le lundi).
+    </p>
 
+    <div class="buttons">
       <button class="btn btn-primary" onclick="window.open('carte.pdf', '_blank')">
         La carte
-    </button>
+      </button>
 
-
-        <button class="btn btn-secondary" onclick="alert('📞 Commande : 01 23 45 67 89')">
-          Commander
-        </button>
-      </div>
-
-      <div class="infos">
-        <div class="info-box">⏰ Horaires : 11h → 22h</div>
-        <div class="info-box">📅 Jours : Mardi → Dimanche (fermé lundi)</div>
-        <div class="info-box">🍕 sur place ou à emporter</div>
-      </div>
+      <button class="btn btn-secondary" onclick="alert('📞 Commande : 01 23 45 67 89')">
+        Commander
+      </button>
     </div>
-  </main>
+
+    <div class="infos">
+      <div class="info-box">⏰ Horaires : 11h → 22h</div>
+      <div class="info-box">📅 Jours : Mardi → Dimanche (fermé lundi)</div>
+      <div class="info-box">🍕 Sur place ou à emporter</div>
+    </div>
+  </div>
+</main>
+
 
   <section id="contact">
     <div class="section-wrap">
