--- a/index.html
+++ b/index.html
@@ -1,20 +1,153 @@
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pizzeria-studenti</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0b1220;
+      color: white;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 16px 22px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: rgba(11, 18, 32, 0.85);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+      z-index: 10;
+    }
+
+    .logo {
+      font-weight: 800;
+      font-size: 18px;
+    }
+
+    .nav a {
+      color: white;
+      text-decoration: none;
+      margin-left: 14px;
+      opacity: 0.85;
+      font-size: 14px;
+    }
+    .nav a:hover { opacity: 1; }
+
+    .hero {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 120px 20px 60px;
+      background: linear-gradient(120deg, rgba(0,0,0,0.65), rgba(0,0,0,0.35)),
+                  url("https://images.unsplash.com/photo-1542281286-9e0a16bb7366?auto=format&fit=crop&w=1600&q=80");
+      background-size: cover;
+      background-position: center;
+    }
+
+    .card {
+      width: min(920px, 100%);
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.10);
+      border-radius: 22px;
+      padding: 34px;
+      box-shadow: 0 30px 80px rgba(0,0,0,0.45);
+      text-align: center;
+    }
+
+    h1 { margin: 0 0 12px; font-size: clamp(28px, 4vw, 46px); }
+    p { margin: 0 0 20px; opacity: 0.9; font-size: 16px; }
+
+    .badge {
+      display: inline-block;
+      padding: 6px 12px;
+      border-radius: 999px;
+      font-size: 13px;
+      font-weight: 700;
+      background: rgba(34,197,94,0.18);
+      border: 1px solid rgba(34,197,94,0.35);
+      margin-bottom: 14px;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+    }
+
+    .btn {
+      border: none;
+      cursor: pointer;
+      padding: 12px 18px;
+      border-radius: 14px;
+      font-weight: 700;
+      font-size: 15px;
+      transition: transform 0.08s ease, opacity 0.2s ease;
+    }
+    .btn:active { transform: scale(0.98); }
+    .btn-primary { background: #f97316; color: #111827; }
+    .btn-primary:hover { opacity: 0.92; }
+    .btn-secondary { background: rgba(255,255,255,0.10); color: white; border: 1px solid rgba(255,255,255,0.14); }
+    .btn-secondary:hover { opacity: 0.95; }
+
+    .infos {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+
+    .info-box {
+      padding: 14px;
+      border-radius: 16px;
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.08);
+      font-size: 14px;
+      opacity: 0.92;
+      min-width: 180px;
+    }
+
+    section { padding: 70px 20px; background: #0b1220; text-align: center; }
+    .menu-title { font-size: 26px; margin: 0 0 10px; }
+    .menu-grid { display: grid; grid-template-columns: repeat(2, minmax(0,1fr)); gap: 14px; margin-top: 18px; }
+    .menu-item { padding: 16px; border-radius: 18px; background: rgba(255,255,255,0.06); border: 1px solid rgba(255,255,255,0.08); }
+    .menu-item strong { display: block; margin-bottom: 6px; font-size: 15px; }
+    .price { float: right; opacity: 0.9; font-weight: 700; }
+
+    footer { padding: 30px 20px; text-align: center; opacity: 0.7; font-size: 13px; border-top: 1px solid rgba(255,255,255,0.08); }
+
+    @media (max-width:720px) { .menu-grid { grid-template-columns: 1fr; } .infos { flex-direction: column; } }
+  </style>
+</head>
+<body>
+
+<header>
+  <div class="logo">🍕 Pizzeria-studenti</div>
+  <nav class="nav">
+    <a href="#accueil">Accueil</a>
+    <a href="#carte">La carte</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+
 <main id="accueil" class="hero">
   <div class="card">
     <div class="badge">🕒 Ouvert du mardi au dimanche — 11h à 22h</div>
     <h1>La pizza des étudiants 🍕</h1>
-    <p>
-      Pizzas généreuses, prix étudiants, sur place ou à emporter.
-      On t’attend de <b>11h à 22h</b> (fermé le lundi).
-    </p>
+    <p>Pizzas généreuses, prix étudiants, sur place ou à emporter.<br>On t’attend de <b>11h à 22h</b> (fermé le lundi).</p>
 
     <div class="buttons">
-      <button class="btn btn-primary" onclick="window.open('carte.pdf', '_blank')">
-        La carte
-      </button>
-
-      <button class="btn btn-secondary" onclick="alert('📞 Commande : 01 23 45 67 89')">
-        Commander
-      </button>
+      <button class="btn btn-primary" onclick="window.open('carte.pdf','_blank')">La carte</button>
+      <button class="btn btn-secondary" onclick="alert('📞 Commande : 01 23 45 67 89')">Commander</button>
     </div>
 
     <div class="infos">
@@ -24,3 +157,29 @@
     </div>
   </div>
 </main>
+
+<section id="carte">
+  <h2 class="menu-title">La carte</h2>
+  <div class="menu-grid">
+    <div class="menu-item"><strong>Margherita <span class="price">8,90€</span></strong>Sauce tomate, mozzarella, basilic.</div>
+    <div class="menu-item"><strong>Reine <span class="price">10,90€</span></strong>Jambon, champignons, mozzarella.</div>
+    <div class="menu-item"><strong>4 Fromages <span class="price">11,90€</span></strong>Mozzarella, chèvre, gorgonzola, parmesan.</div>
+    <div class="menu-item"><strong>Pepperoni <span class="price">12,50€</span></strong>Pepperoni, mozzarella, sauce tomate.</div>
+  </div>
+</section>
+
+<section id="contact">
+  <h2 class="menu-title">Contact</h2>
+  <p>📞 01 23 45 67 89 — ✉️ contact@pizzeria-studenti.fr</p>
+</section>
+
+<footer>
+  © <span id="year"></span> Pizzeria-studenti
+</footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
+</body>
+</html>
