--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <h2>La pizzeria studenti est une pizzeria où les etudiants peuvent passer leurs midis. des pizzas à bas prix, desserts et boissons.</h2>
   <t>Pour plus d'infos sur les prix, vous pouvez vous rendre sur <a href="carte.pdf" target="_blank">LA CARTE</a>. </t>
     <section id="photo-contact" style="padding: 70px 20px; background:#0b1220; text-align:center;">
-    <img src="image.png" alt="Photo" style="max-width: 900px; width: 100%; border-radius: 22px; border: 1px solid rgba(255,255,255,0.10); box-shadow: 0 30px 80px rgba(0,0,0,0.35);">
+    <img src="image.jpeg" alt="Photo" style="max-width: 900px; width: 100%; border-radius: 22px; border: 1px solid rgba(255,255,255,0.10); box-shadow: 0 30px 80px rgba(0,0,0,0.35);">
   </section>
 </section>section>
   <section id="contact">
