--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
     <section id="photo-contact" style="padding: 70px 20px; background:#0b1220; text-align:center;">
     <img src="image.jpeg" alt="Photo" style="max-width: 900px; width: 100%; border-radius: 22px; border: 1px solid rgba(255,255,255,0.10); box-shadow: 0 30px 80px rgba(0,0,0,0.35);">
   </section>
-</section>section>
+  <t>Vous pouvez auss faire vos pizzas sur mesure !<br>en cas d'envie, consultez un serveur, il vous amenera la carte des ingredients.</t>
+</section>
   <section id="contact">
   <h2 class="menu-title">Contact</h2>
   <p>📞 01 23 45 67 89 — ✉️ contact@pizzeria-studenti.fr</p>
